# DeepSeekBalanceMonitorForMac

./: .gitignore  .ignoregit  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT_GUIDE.md  GITHUB_RELEASE_AUTOMATION.md  RELEASE_GUIDE.md  WECHAT_ARTICLE_DEEPSEEK_MONITOR_OPEN_SOURCE.md
scripts/: DeepSeekBalanceMonitor.spec  build_dmg.sh  build_mac.sh  install_git_hooks.sh  safe_release.sh  sync_private_docs.sh
scripts/hooks/: pre-push
src/deepseek_balance_monitor_mac/: __init__.py  __main__.py  api_client.py  app_state.py  config.py  credential_store.py  history_dialog.py  icon_renderer.py  secure_settings.py  storage.py
src/deepseek_balance_monitor_mac/assets/: AppIcon.icns
src/deepseek_balance_monitor_mac/core/: __init__.py  monitoring.py
src/deepseek_balance_monitor_mac/infra/: __init__.py  exchange_rates.py  secret_store.py
src/deepseek_balance_monitor_mac/mac/: main.py  settings.py
tests/: test_core.py
